兼容 Java 8